central-controller/docs/istio/istio-example-yaml/mTLS.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: sdewan-system
spec:
  mtls:
    mode: STRICT
